--- a/src/style/global.scss
+++ b/src/style/global.scss
@@ -1,5 +1,4 @@
 // global.scss
-@import "./theme/index.scss";
 // variables.scss
 $primary-color: #fe4e5e;
 $background-color: #fefefe;
@@ -9,3 +8,5 @@ $padding: 124px;
 //     backgroundColor: $background-color;
 //     padding: $padding;
 // }
+
+/*end*/
