--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -1,22 +1,11 @@
 .element-card {
-    width: 140px;
-    height: 200px;
     cursor: default;
     text-align: center;
-    border: 1px solid rgba(127, 255, 255, 0.25);
-    box-shadow: 0 0 12px rgba(0, 255, 255, 0.5);
-
-    &:hover {
-        border: 1px solid rgba(127, 255, 255, 0.75);
-        box-shadow: 0 0 12px rgba(0, 255, 255, 0.75);
-    }
 
     .card-id {
         position: absolute;
         top: 20px;
         right: 20px;
-        font-size: 12px;
-        color: rgba(127, 255, 255, 0.75);
     }
 
     .card-name {
@@ -24,10 +13,10 @@
         top: 40px;
         left: 0px;
         right: 0;
-        font-size: 30px;
         font-weight: bold;
-        color: rgba(255, 255, 255, 0.75);
-        text-shadow: 0 0 10px rgba(0, 255, 255, 0.95);
+        white-space: nowrap;
+        overflow: hidden;
+        text-overflow: ellipsis;
     }
 
     .card-detail {
@@ -35,7 +24,5 @@
         left: 0;
         right: 0;
         bottom: 15px;
-        font-size: 12px;
-        color: rgba(127, 255, 255, 0.75);
     }
 }
