style: adjust avatar and card image sizes
- Set avatar height to 120px for both regular and detail views
- Add styling for card avatar name position and line height
- Set card detail image height to 240px

--- a/src/style/style.scss
+++ b/src/style/style.scss
@@ -45,7 +45,7 @@
         bottom: 0;
         z-index: 1;
         width: 140px !important;
-        height: auto !important;
+        height: 120px !important;
         object-fit: cover;
     }
 }
@@ -79,6 +79,13 @@
         // animation: tracking-in-expand-fwd 0.8s cubic-bezier(0.215, 0.61, 0.355, 1) both;
         // animation-delay: 0.6s;
     }
+    .card-avatar-name{
+        top: auto;
+        bottom: 0;
+        left: 0px;
+        right: 0;
+        line-height: 2 !important;
+    }
 
     .card-detail {
         position: absolute;
@@ -97,7 +104,7 @@
         bottom: 0;
         z-index: 1;
         width: 280px !important;
-        height: auto !important;
+        height: 240px !important;
         object-fit: cover;
     }
 }
