--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,10 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import "tailwindcss";
+
+@plugin "daisyui" {
+    themes: all;
+}
+
+/* @plugin "@tailwindcss/typography" */
 
 body,
 html {
