fix(ui): 优化图片列表下拉选择器及表单项的样式与布局

--- a/src/style.css
+++ b/src/style.css
@@ -4,6 +4,11 @@
     themes: all;
 }
 
+@utility w-option-xs {
+    max-width: calc(var(--container-xs) - 90px);
+}
+
+
 /* @plugin "@tailwindcss/typography" */
 
 body,
