feat: 更换字体v，以及页面加载之前就设置字体 #96

--- a/src/style.css
+++ b/src/style.css
@@ -20,6 +20,7 @@ html {
     overflow-y: overlay;
     overflow-y: hidden;
     overflow-x: hidden;
+    font-family: var(--app-font-family);
 }
 
 ul {
