--- a/src/views/Home/components/PrizeList/index.scss
+++ b/src/views/Home/components/PrizeList/index.scss
@@ -21,7 +21,7 @@
 .current-prize {
     position: relative;
     display: block;
-    overflow: hidden;
+    overflow: clip;
     isolation: isolate;
 
     border-radius: 20px;
